@@ -4482,7 +4482,7 @@ jtag_device_def_type deviceDefinitions[] = {
 	0xA701,
 	256, 512,	// 131072 bytes flash
 	8, 512,	// 4096 bytes EEPROM
-	71 * 4,	// 71 interrupt vectors
+	72 * 4,	// 72 interrupt vectors
 	DEVFL_MKII_ONLY,
 	NULL,	// registers not yet defined
 	false,
@@ -4495,21 +4495,21 @@ jtag_device_def_type deviceDefinitions[] = {
 	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
 	    { 0xFF,0xFF,0x1F,0xE0,0xFF,0x1D,0xA9,0xF8 }, // ucWriteIO
 	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
-	    { 0x73,0xFF,0x3F,0xFF,0xF7,0x3F,0xF7,0x3F,
-	      0xF7,0x3F,0x5F,0x3F,0x37,0x37,0x36,0xF0,
-	      0xFF,0xFF,0xFF,0x01,0xFF,0x0F,0x00,0x00,
-	      0xF7,0x3F,0x36,0x00,0xFF,0xFF,0xFF,0xFF,
-	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	    { 0xFB,0xFF,0xBF,0xFF,0xF7,0x3F,0xF7,0x3F,
+	      0xF7,0x3F,0x5F,0x3F,0x77,0x77,0x03,0xF0,
+	      0xFF,0xFF,0xFF,0x01,0x00,0x00,0x00,0x00,
+	      0xF7,0xBF,0xFF,0xFA,0xFE,0xFF,0xA7,0xFF,
+	      0xFF,0xFF,0xEF,0xFF,0xFF,0xFF,0xFF,0xFF,
 	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
 	      0xFF,0xFF,0xFF,0xFF }, // ucReadExtIO
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
 	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
-	    { 0x73,0xFF,0x3F,0xF8,0xF7,0x3F,0xF7,0x3F,
-	      0xF7,0x3F,0x5F,0x2F,0x36,0x36,0x36,0xF0,
-	      0xFF,0xFF,0xFF,0x01,0xFF,0x0F,0x00,0x00,
-	      0xF7,0x3F,0x36,0x00,0xFF,0xFF,0xFF,0xFF,
-	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
+	    { 0xFB,0xFF,0xBF,0xFF,0xB7,0x3F,0xB7,0x3F,
+	      0xB7,0x3F,0x5F,0x3F,0x77,0x77,0x03,0xB0,
+	      0xFF,0xE1,0xFF,0x01,0x00,0x00,0x00,0x00,
+	      0xB7,0xBF,0xFF,0xDA,0x3C,0xFF,0xA7,0x0F,
+	      0xFF,0xFF,0xE8,0xFF,0xFF,0xFF,0xFF,0xFF,
 	      0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
 	      0xFF,0xFF,0xFF,0xFF }, // ucWriteExtIO
 	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
